--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -20,6 +20,9 @@
     "pin": {
         "message": "Pin"
     },
+    "unpin": {
+        "message": "Unpin"
+    },
     "remove": {
         "message": "Remove"
     },
