Added shortcuts support

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -11,6 +11,12 @@
     "ext_menu_display": {
         "message": "Display Hoardie"
     },
+    "command_desc_hoard_all": {
+        "message": "Hoard all tabs"
+    },
+    "command_desc_hoard_this": {
+        "message": "Hoard current tab"
+    },
     "remove_all": {
         "message": "Remove All"
     },
